--- a/package.json
+++ b/package.json
@@ -5,19 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "lite-server -c bs-config.json"
+    "dev": "lite-server"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "lite-server": "^2.4.0"
-  },
   "dependencies": {
     "es6-module-loader": "^0.17.11",
-    "jquery": "^3.4.0",
-    "material-design-lite": "^1.3.0",
-    "systemjs": "^3.1.6",
-    "traceur": "0.0.111"
+    "jquery": "^2.2.3",
+    "material-design-lite": "^1.1.3",
+    "systemjs": "^0.19.27",
+    "traceur": "0.0.108"
+  },
+  "devDependencies": {
+    "lite-server": "^2.2.0"
   }
 }
